# kakeibo-cli

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  lefthook.yml
.github/workflows/: deploy.yml
docs/: adr.md  api-spec.md  spec.md
note/: api-auth-test.md  data-migration.md  gcp-setup.md
src/: auth.rs  cli.rs  db.rs  main.rs  model.rs  repository.rs
