[package]
name = "kakeibo-cli"
version = "0.1.0"
edition = "2024"
authos = ["aklzo"]
description = "個人用CLI家計簿アプリ"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
